PLTFrontEnd/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    WHITESPACE
    EMPTYLINE

Grammar

Rule 0     S' -> input_stmt
Rule 1     input_stmt -> piece_stmt board_stmt player_stmt rule_stmt function_stmt
Rule 2     piece_stmt -> PIECE : NEWLINE INDENT piece_expr DEDENT
Rule 3     piece_expr -> STRING NUMBER NEWLINE
Rule 4     piece_expr -> STRING NEWLINE
Rule 5     piece_expr -> piece_expr STRING NEWLINE
Rule 6     piece_expr -> piece_expr STRING NUMBER NEWLINE
Rule 7     board_stmt -> BOARD : NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT
Rule 8     player_stmt -> PLAYER : NEWLINE INDENT NUMBER NEWLINE DEDENT
Rule 9     rule_stmt -> RULE : NEWLINE INDENT action_stmt DEDENT
Rule 10    action_stmt -> ACTION : = ID NEWLINE
Rule 11    action_stmt -> action_stmt ACTION : = ID NEWLINE
Rule 12    function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt funcdef DEDENT
Rule 13    function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt init_assign_stmt funcdef DEDENT
Rule 14    stmt -> simple_stmt
Rule 15    stmt -> compound_stmt
Rule 16    simple_stmt -> assign_stmt
Rule 17    simple_stmt -> flow_stmt
Rule 18    compound_stmt -> func_expr NEWLINE
Rule 19    compound_stmt -> for_stmt
Rule 20    compound_stmt -> if_stmt
Rule 21    compound_stmt -> while_stmt
Rule 22    assign_stmt -> power : = expr NEWLINE
Rule 23    init_assign_stmt -> DEF INIT : NEWLINE INDENT init_stmt DEDENT
Rule 24    init_stmt -> STRING NUMBER position NEWLINE
Rule 25    init_stmt -> init_stmt STRING NUMBER position NEWLINE
Rule 26    global_assign_stmt -> global_assign_stmt GLOBAL assign_stmt
Rule 27    global_assign_stmt -> empty
Rule 28    flow_stmt -> break_stmt
Rule 29    flow_stmt -> continue_stmt
Rule 30    flow_stmt -> return_stmt
Rule 31    funcdef -> DEF ID parameters : suite
Rule 32    funcdef -> DEF ID : suite
Rule 33    funcdef -> funcdef DEF ID parameters : suite
Rule 34    funcdef -> funcdef DEF ID : suite
Rule 35    parameters -> parameters , parameter
Rule 36    parameters -> parameter
Rule 37    parameter -> ID
Rule 38    expr -> or_test
Rule 39    or_test -> and_test
Rule 40    or_test -> or_test OR and_test
Rule 41    and_test -> not_test
Rule 42    and_test -> and_test AND not_test
Rule 43    not_test -> NOT not_test
Rule 44    not_test -> comparison
Rule 45    comparison -> operand
Rule 46    comparison -> comparison = operand
Rule 47    comparison -> comparison > operand
Rule 48    comparison -> comparison < operand
Rule 49    comparison -> comparison > = operand
Rule 50    comparison -> comparison < = operand
Rule 51    comparison -> comparison ~ = operand
Rule 52    operand -> term
Rule 53    operand -> operand + term
Rule 54    operand -> operand - term
Rule 55    term -> factor
Rule 56    term -> term * factor
Rule 57    term -> term / factor
Rule 58    term -> term % factor
Rule 59    factor -> power
Rule 60    factor -> + factor
Rule 61    factor -> - factor
Rule 62    power -> atom
Rule 63    power -> power trailer
Rule 64    atom -> array
Rule 65    atom -> position
Rule 66    atom -> ID
Rule 67    atom -> STRING
Rule 68    atom -> NUMBER
Rule 69    atom -> BOOLEAN
Rule 70    atom -> NIL
Rule 71    atom -> func_expr
Rule 72    atom -> ( expr )
Rule 73    position -> ( expr , expr )
Rule 74    array -> [ parameter_list ]
Rule 75    trailer -> . ID
Rule 76    trailer -> [ expr ]
Rule 77    func_expr -> ID ( )
Rule 78    func_expr -> ID ( parameter_list )
Rule 79    parameter_list -> expr
Rule 80    parameter_list -> parameter_list , expr
Rule 81    for_stmt -> FOR ID : = NUMBER TO NUMBER : suite
Rule 82    for_stmt -> FOR ID IN expr : suite
Rule 83    if_stmt -> IF expr : suite
Rule 84    if_stmt -> IF expr : suite elseif_stmt
Rule 85    if_stmt -> IF expr : suite ELSE : suite
Rule 86    if_stmt -> IF expr : suite elseif_stmt ELSE : suite
Rule 87    elseif_stmt -> ELSEIF expr : suite
Rule 88    elseif_stmt -> elseif_stmt ELSEIF expr : suite
Rule 89    while_stmt -> WHILE expr : suite
Rule 90    suite -> NEWLINE
Rule 91    suite -> NEWLINE INDENT suite_stmt DEDENT
Rule 92    suite_stmt -> stmt
Rule 93    suite_stmt -> suite_stmt stmt
Rule 94    return_stmt -> RETURN expr NEWLINE
Rule 95    continue_stmt -> CONTINUE NEWLINE
Rule 96    break_stmt -> BREAK NEWLINE
Rule 97    empty -> <empty>

Terminals, with rules where they appear

%                    : 58
(                    : 72 73 77 78
)                    : 72 73 77 78
*                    : 56
+                    : 53 60
,                    : 35 73 80
-                    : 54 61
.                    : 75
/                    : 57
:                    : 2 7 8 9 10 11 12 13 22 23 31 32 33 34 81 81 82 83 84 85 85 86 86 87 88 89
<                    : 48 50
=                    : 10 11 22 46 49 50 51 81
>                    : 47 49
ACTION               : 10 11
AND                  : 42
BOARD                : 7
BOOLEAN              : 69
BREAK                : 96
COMMENT              : 
CONTINUE             : 95
DEDENT               : 2 7 8 9 12 13 23 91
DEF                  : 23 31 32 33 34
ELSE                 : 85 86
ELSEIF               : 87 88
EMPTYLINE            : 
FOR                  : 81 82
FUNCTION             : 12 13
GLOBAL               : 26
ID                   : 10 11 31 32 33 34 37 66 75 77 78 81 82
IF                   : 83 84 85 86
IN                   : 82
INDENT               : 2 7 8 9 12 13 23 91
INIT                 : 23
NEWLINE              : 2 3 4 5 6 7 7 8 8 9 10 11 12 13 18 22 23 24 25 90 91 94 95 96
NIL                  : 70
NOT                  : 43
NUMBER               : 3 6 7 7 8 24 25 68 81 81
OR                   : 40
PIECE                : 2
PLAYER               : 8
RETURN               : 94
RULE                 : 9
STRING               : 3 4 5 6 24 25 67
TO                   : 81
WHILE                : 89
WHITESPACE           : 
[                    : 74 76
]                    : 74 76
error                : 
~                    : 51

Nonterminals, with rules where they appear

action_stmt          : 9 11
and_test             : 39 40 42
array                : 64
assign_stmt          : 16 26
atom                 : 62
board_stmt           : 1
break_stmt           : 28
comparison           : 44 46 47 48 49 50 51
compound_stmt        : 15
continue_stmt        : 29
elseif_stmt          : 84 86 88
empty                : 27
expr                 : 22 72 73 73 76 79 80 82 83 84 85 86 87 88 89 94
factor               : 55 56 57 58 60 61
flow_stmt            : 17
for_stmt             : 19
func_expr            : 18 71
funcdef              : 12 13 33 34
function_stmt        : 1
global_assign_stmt   : 12 13 26
if_stmt              : 20
init_assign_stmt     : 13
init_stmt            : 23 25
input_stmt           : 0
not_test             : 41 42 43
operand              : 45 46 47 48 49 50 51 53 54
or_test              : 38 40
parameter            : 35 36
parameter_list       : 74 78 80
parameters           : 31 33 35
piece_expr           : 2 5 6
piece_stmt           : 1
player_stmt          : 1
position             : 24 25 65
power                : 22 59 63
return_stmt          : 30
rule_stmt            : 1
simple_stmt          : 14
stmt                 : 92 93
suite                : 31 32 33 34 81 82 83 84 85 85 86 86 87 88 89
suite_stmt           : 91 93
term                 : 52 53 54 56 57 58
trailer              : 63
while_stmt           : 21

Parsing method: LALR

state 0

    (0) S' -> . input_stmt
    (1) input_stmt -> . piece_stmt board_stmt player_stmt rule_stmt function_stmt
    (2) piece_stmt -> . PIECE : NEWLINE INDENT piece_expr DEDENT

    PIECE           shift and go to state 2

    piece_stmt                     shift and go to state 1
    input_stmt                     shift and go to state 3

state 1

    (1) input_stmt -> piece_stmt . board_stmt player_stmt rule_stmt function_stmt
    (7) board_stmt -> . BOARD : NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT

    BOARD           shift and go to state 5

    board_stmt                     shift and go to state 4

state 2

    (2) piece_stmt -> PIECE . : NEWLINE INDENT piece_expr DEDENT

    :               shift and go to state 6


state 3

    (0) S' -> input_stmt .



state 4

    (1) input_stmt -> piece_stmt board_stmt . player_stmt rule_stmt function_stmt
    (8) player_stmt -> . PLAYER : NEWLINE INDENT NUMBER NEWLINE DEDENT

    PLAYER          shift and go to state 7

    player_stmt                    shift and go to state 8

state 5

    (7) board_stmt -> BOARD . : NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT

    :               shift and go to state 9


state 6

    (2) piece_stmt -> PIECE : . NEWLINE INDENT piece_expr DEDENT

    NEWLINE         shift and go to state 10


state 7

    (8) player_stmt -> PLAYER . : NEWLINE INDENT NUMBER NEWLINE DEDENT

    :               shift and go to state 11


state 8

    (1) input_stmt -> piece_stmt board_stmt player_stmt . rule_stmt function_stmt
    (9) rule_stmt -> . RULE : NEWLINE INDENT action_stmt DEDENT

    RULE            shift and go to state 12

    rule_stmt                      shift and go to state 13

state 9

    (7) board_stmt -> BOARD : . NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT

    NEWLINE         shift and go to state 14


state 10

    (2) piece_stmt -> PIECE : NEWLINE . INDENT piece_expr DEDENT

    INDENT          shift and go to state 15


state 11

    (8) player_stmt -> PLAYER : . NEWLINE INDENT NUMBER NEWLINE DEDENT

    NEWLINE         shift and go to state 16


state 12

    (9) rule_stmt -> RULE . : NEWLINE INDENT action_stmt DEDENT

    :               shift and go to state 17


state 13

    (1) input_stmt -> piece_stmt board_stmt player_stmt rule_stmt . function_stmt
    (12) function_stmt -> . FUNCTION : NEWLINE INDENT global_assign_stmt funcdef DEDENT
    (13) function_stmt -> . FUNCTION : NEWLINE INDENT global_assign_stmt init_assign_stmt funcdef DEDENT

    FUNCTION        shift and go to state 18

    function_stmt                  shift and go to state 19

state 14

    (7) board_stmt -> BOARD : NEWLINE . INDENT NUMBER NUMBER NEWLINE DEDENT

    INDENT          shift and go to state 20


state 15

    (2) piece_stmt -> PIECE : NEWLINE INDENT . piece_expr DEDENT
    (3) piece_expr -> . STRING NUMBER NEWLINE
    (4) piece_expr -> . STRING NEWLINE
    (5) piece_expr -> . piece_expr STRING NEWLINE
    (6) piece_expr -> . piece_expr STRING NUMBER NEWLINE

    STRING          shift and go to state 21

    piece_expr                     shift and go to state 22

state 16

    (8) player_stmt -> PLAYER : NEWLINE . INDENT NUMBER NEWLINE DEDENT

    INDENT          shift and go to state 23


state 17

    (9) rule_stmt -> RULE : . NEWLINE INDENT action_stmt DEDENT

    NEWLINE         shift and go to state 24


state 18

    (12) function_stmt -> FUNCTION . : NEWLINE INDENT global_assign_stmt funcdef DEDENT
    (13) function_stmt -> FUNCTION . : NEWLINE INDENT global_assign_stmt init_assign_stmt funcdef DEDENT

    :               shift and go to state 25


state 19

    (1) input_stmt -> piece_stmt board_stmt player_stmt rule_stmt function_stmt .

    $end            reduce using rule 1 (input_stmt -> piece_stmt board_stmt player_stmt rule_stmt function_stmt .)


state 20

    (7) board_stmt -> BOARD : NEWLINE INDENT . NUMBER NUMBER NEWLINE DEDENT

    NUMBER          shift and go to state 26


state 21

    (3) piece_expr -> STRING . NUMBER NEWLINE
    (4) piece_expr -> STRING . NEWLINE

    NUMBER          shift and go to state 28
    NEWLINE         shift and go to state 27


state 22

    (2) piece_stmt -> PIECE : NEWLINE INDENT piece_expr . DEDENT
    (5) piece_expr -> piece_expr . STRING NEWLINE
    (6) piece_expr -> piece_expr . STRING NUMBER NEWLINE

    DEDENT          shift and go to state 29
    STRING          shift and go to state 30


state 23

    (8) player_stmt -> PLAYER : NEWLINE INDENT . NUMBER NEWLINE DEDENT

    NUMBER          shift and go to state 31


state 24

    (9) rule_stmt -> RULE : NEWLINE . INDENT action_stmt DEDENT

    INDENT          shift and go to state 32


state 25

    (12) function_stmt -> FUNCTION : . NEWLINE INDENT global_assign_stmt funcdef DEDENT
    (13) function_stmt -> FUNCTION : . NEWLINE INDENT global_assign_stmt init_assign_stmt funcdef DEDENT

    NEWLINE         shift and go to state 33


state 26

    (7) board_stmt -> BOARD : NEWLINE INDENT NUMBER . NUMBER NEWLINE DEDENT

    NUMBER          shift and go to state 34


state 27

    (4) piece_expr -> STRING NEWLINE .

    DEDENT          reduce using rule 4 (piece_expr -> STRING NEWLINE .)
    STRING          reduce using rule 4 (piece_expr -> STRING NEWLINE .)


state 28

    (3) piece_expr -> STRING NUMBER . NEWLINE

    NEWLINE         shift and go to state 35


state 29

    (2) piece_stmt -> PIECE : NEWLINE INDENT piece_expr DEDENT .

    BOARD           reduce using rule 2 (piece_stmt -> PIECE : NEWLINE INDENT piece_expr DEDENT .)


state 30

    (5) piece_expr -> piece_expr STRING . NEWLINE
    (6) piece_expr -> piece_expr STRING . NUMBER NEWLINE

    NEWLINE         shift and go to state 36
    NUMBER          shift and go to state 37


state 31

    (8) player_stmt -> PLAYER : NEWLINE INDENT NUMBER . NEWLINE DEDENT

    NEWLINE         shift and go to state 38


state 32

    (9) rule_stmt -> RULE : NEWLINE INDENT . action_stmt DEDENT
    (10) action_stmt -> . ACTION : = ID NEWLINE
    (11) action_stmt -> . action_stmt ACTION : = ID NEWLINE

    ACTION          shift and go to state 39

    action_stmt                    shift and go to state 40

state 33

    (12) function_stmt -> FUNCTION : NEWLINE . INDENT global_assign_stmt funcdef DEDENT
    (13) function_stmt -> FUNCTION : NEWLINE . INDENT global_assign_stmt init_assign_stmt funcdef DEDENT

    INDENT          shift and go to state 41


state 34

    (7) board_stmt -> BOARD : NEWLINE INDENT NUMBER NUMBER . NEWLINE DEDENT

    NEWLINE         shift and go to state 42


state 35

    (3) piece_expr -> STRING NUMBER NEWLINE .

    DEDENT          reduce using rule 3 (piece_expr -> STRING NUMBER NEWLINE .)
    STRING          reduce using rule 3 (piece_expr -> STRING NUMBER NEWLINE .)


state 36

    (5) piece_expr -> piece_expr STRING NEWLINE .

    DEDENT          reduce using rule 5 (piece_expr -> piece_expr STRING NEWLINE .)
    STRING          reduce using rule 5 (piece_expr -> piece_expr STRING NEWLINE .)


state 37

    (6) piece_expr -> piece_expr STRING NUMBER . NEWLINE

    NEWLINE         shift and go to state 43


state 38

    (8) player_stmt -> PLAYER : NEWLINE INDENT NUMBER NEWLINE . DEDENT

    DEDENT          shift and go to state 44


state 39

    (10) action_stmt -> ACTION . : = ID NEWLINE

    :               shift and go to state 45


state 40

    (9) rule_stmt -> RULE : NEWLINE INDENT action_stmt . DEDENT
    (11) action_stmt -> action_stmt . ACTION : = ID NEWLINE

    DEDENT          shift and go to state 46
    ACTION          shift and go to state 47


state 41

    (12) function_stmt -> FUNCTION : NEWLINE INDENT . global_assign_stmt funcdef DEDENT
    (13) function_stmt -> FUNCTION : NEWLINE INDENT . global_assign_stmt init_assign_stmt funcdef DEDENT
    (26) global_assign_stmt -> . global_assign_stmt GLOBAL assign_stmt
    (27) global_assign_stmt -> . empty
    (97) empty -> .

    GLOBAL          reduce using rule 97 (empty -> .)
    DEF             reduce using rule 97 (empty -> .)

    empty                          shift and go to state 48
    global_assign_stmt             shift and go to state 49

state 42

    (7) board_stmt -> BOARD : NEWLINE INDENT NUMBER NUMBER NEWLINE . DEDENT

    DEDENT          shift and go to state 50


state 43

    (6) piece_expr -> piece_expr STRING NUMBER NEWLINE .

    DEDENT          reduce using rule 6 (piece_expr -> piece_expr STRING NUMBER NEWLINE .)
    STRING          reduce using rule 6 (piece_expr -> piece_expr STRING NUMBER NEWLINE .)


state 44

    (8) player_stmt -> PLAYER : NEWLINE INDENT NUMBER NEWLINE DEDENT .

    RULE            reduce using rule 8 (player_stmt -> PLAYER : NEWLINE INDENT NUMBER NEWLINE DEDENT .)


state 45

    (10) action_stmt -> ACTION : . = ID NEWLINE

    =               shift and go to state 51


state 46

    (9) rule_stmt -> RULE : NEWLINE INDENT action_stmt DEDENT .

    FUNCTION        reduce using rule 9 (rule_stmt -> RULE : NEWLINE INDENT action_stmt DEDENT .)


state 47

    (11) action_stmt -> action_stmt ACTION . : = ID NEWLINE

    :               shift and go to state 52


state 48

    (27) global_assign_stmt -> empty .

    GLOBAL          reduce using rule 27 (global_assign_stmt -> empty .)
    DEF             reduce using rule 27 (global_assign_stmt -> empty .)


state 49

    (12) function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt . funcdef DEDENT
    (13) function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt . init_assign_stmt funcdef DEDENT
    (26) global_assign_stmt -> global_assign_stmt . GLOBAL assign_stmt
    (31) funcdef -> . DEF ID parameters : suite
    (32) funcdef -> . DEF ID : suite
    (33) funcdef -> . funcdef DEF ID parameters : suite
    (34) funcdef -> . funcdef DEF ID : suite
    (23) init_assign_stmt -> . DEF INIT : NEWLINE INDENT init_stmt DEDENT

    GLOBAL          shift and go to state 53
    DEF             shift and go to state 54

    init_assign_stmt               shift and go to state 55
    funcdef                        shift and go to state 56

state 50

    (7) board_stmt -> BOARD : NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT .

    PLAYER          reduce using rule 7 (board_stmt -> BOARD : NEWLINE INDENT NUMBER NUMBER NEWLINE DEDENT .)


state 51

    (10) action_stmt -> ACTION : = . ID NEWLINE

    ID              shift and go to state 57


state 52

    (11) action_stmt -> action_stmt ACTION : . = ID NEWLINE

    =               shift and go to state 58


state 53

    (26) global_assign_stmt -> global_assign_stmt GLOBAL . assign_stmt
    (22) assign_stmt -> . power : = expr NEWLINE
    (62) power -> . atom
    (63) power -> . power trailer
    (64) atom -> . array
    (65) atom -> . position
    (66) atom -> . ID
    (67) atom -> . STRING
    (68) atom -> . NUMBER
    (69) atom -> . BOOLEAN
    (70) atom -> . NIL
    (71) atom -> . func_expr
    (72) atom -> . ( expr )
    (74) array -> . [ parameter_list ]
    (73) position -> . ( expr , expr )
    (77) func_expr -> . ID ( )
    (78) func_expr -> . ID ( parameter_list )

    ID              shift and go to state 68
    STRING          shift and go to state 64
    NUMBER          shift and go to state 59
    BOOLEAN         shift and go to state 70
    NIL             shift and go to state 69
    (               shift and go to state 62
    [               shift and go to state 67

    power                          shift and go to state 65
    assign_stmt                    shift and go to state 63
    atom                           shift and go to state 66
    position                       shift and go to state 71
    array                          shift and go to state 60
    func_expr                      shift and go to state 61

state 54

    (31) funcdef -> DEF . ID parameters : suite
    (32) funcdef -> DEF . ID : suite
    (23) init_assign_stmt -> DEF . INIT : NEWLINE INDENT init_stmt DEDENT

    ID              shift and go to state 73
    INIT            shift and go to state 72


state 55

    (13) function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt init_assign_stmt . funcdef DEDENT
    (31) funcdef -> . DEF ID parameters : suite
    (32) funcdef -> . DEF ID : suite
    (33) funcdef -> . funcdef DEF ID parameters : suite
    (34) funcdef -> . funcdef DEF ID : suite

    DEF             shift and go to state 74

    funcdef                        shift and go to state 75

state 56

    (12) function_stmt -> FUNCTION : NEWLINE INDENT global_assign_stmt funcdef . DEDENT
    (33) funcdef -> funcdef . DEF ID parameters : suite
    (34) funcdef -> funcdef . DEF ID : suite

    DEDENT          shift and go to state 76
    DEF             shift and go to state 77


state 57

    (10) action_stmt -> ACTION : = ID . NEWLINE

    NEWLINE         shift and go to state 78


state 58

    (11) action_stmt -> action_stmt ACTION : = . ID NEWLINE

    ID              shift and go to state 79


state 59

    (68) atom -> NUMBER .
